# -K-pop-

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: annotation_app.py  streamlit_app.py
configs/: default.yaml  kpop_taxonomy.yaml  tags_kpop.yaml
docs/: datasets.md  design.md  literature_review.md  research_design.md  research_plan.md
examples/: README.md  demo_analysis_schema.json
kpop_scope/: __init__.py  cli.py  config.py  pipeline.py  taxonomy.py  utils.py
kpop_scope/audio/: __init__.py  beat.py  features.py  key.py  loader.py  segmentation.py
kpop_scope/explain/: __init__.py  report_generator.py  rules.py  stem_contribution.py  templates_zh.yaml
kpop_scope/models/: __init__.py  essentia_tagger.py  feature_vector.py  kpop_classifier.py  mert_embedder.py  tagger.py
kpop_scope/stems/: __init__.py  audio_separator_runner.py  demucs_runner.py  stem_features.py
kpop_scope/visualize/: __init__.py  plots.py
kpop_scope_latex_report_draft/: README.md  compile.sh  main.bbl  main.tex  references.bib
scripts/: analyze_stem_contribution.py  batch_analyze.py  bootstrap_pseudo_labels.py  build_human_eval_sheet.py  build_manifest.py  evaluate.py  extract_embeddings.py  make_case_study.py  make_paper_tables.py  prepare_manifest_template.py  run_ablation.py  summarize_human_eval.py  train_classifier.py
tests/: test_ablation.py  test_audio_separator_runner.py  test_human_eval_and_case.py  test_key.py  test_manifest.py  test_pseudo_labels.py  test_report_generator.py  test_report_mode.py  test_script_help.py  test_segmentation.py  test_stem_contribution.py  test_tagger.py  test_taxonomy.py
