[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kpop-scope"
version = "0.1.0"
description = "K-pop oriented music information retrieval toolkit: MP3 to tags, stem-wise arrangement analysis, and Chinese appreciation report."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
keywords = ["music information retrieval", "k-pop", "audio", "mir", "source separation", "music tagging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "librosa>=0.10",
    "soundfile>=0.12",
    "PyYAML>=6.0",
    "matplotlib>=3.7",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "tqdm>=4.65",
]

[project.optional-dependencies]
models = ["torch>=2.1", "transformers>=4.37"]
stems = ["demucs>=4.0"]
app = ["streamlit>=1.30"]
dev = ["pytest>=7.4", "ruff>=0.3", "mypy>=1.8"]
all = ["torch>=2.1", "transformers>=4.37", "demucs>=4.0", "streamlit>=1.30", "pytest>=7.4", "ruff>=0.3", "mypy>=1.8"]

[project.scripts]
kpop-scope = "kpop_scope.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kpop_scope*"]

[tool.setuptools.package-data]
kpop_scope = ["explain/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
